# genstoryai

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.cn.md  README.ja.md  README.kr.md  README.md  docker-compose.yml  mkdocs.yml  nginx.conf  package-lock.json  package.json  supervisord.conf
.github/workflows/: deploy-fullstack.yml  docker-ci.yml  python-app.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/genstoryai_backend/: .env.template  .gitignore  Dockerfile  README.md  env.template  genstoryai.db  pyproject.toml  test_email.py
backend/genstoryai_backend/genstoryai_backend/: config.py  main.py  run.py
backend/genstoryai_backend/genstoryai_backend/agent/: character_agent.py
backend/genstoryai_backend/genstoryai_backend/agents/: __init__.py  character_agent.py  prompt_templete.py  story_agent.py  story_content_agent.py  unified_agent.py
backend/genstoryai_backend/genstoryai_backend/database/: db.py  redis_cache.py  storage.py  storage_sync.py
backend/genstoryai_backend/genstoryai_backend/database/crud/: __init__.py  character_crud.py  story_content_curd.py  story_crud.py  user_crud.py
backend/genstoryai_backend/genstoryai_backend/locales/en/LC_MESSAGES/: base.mo  base.po
backend/genstoryai_backend/genstoryai_backend/locales/zh/LC_MESSAGES/: base.mo
backend/genstoryai_backend/genstoryai_backend/models/: ER_Diagram.md  __init__.py  character.py  character_event.py  character_relationship.py  content_generation.py  event.py  location.py  session.py  session_message.py  story.py  story_content.py  story_template.py  timeline.py  user.py  user_behavior_log.py
backend/genstoryai_backend/genstoryai_backend/models/enum/: gender.py  genre.py  language.py  location_type.py  mbti.py  relationship_type.py
backend/genstoryai_backend/genstoryai_backend/router/: __init__.py  character_router.py  health_router.py  story_content_router.py  story_router.py  user_router.py
backend/genstoryai_backend/genstoryai_backend/router/http_models/: story_model.py
backend/genstoryai_backend/genstoryai_backend/ssf/: ssf.py
backend/genstoryai_backend/genstoryai_backend/utils/: email_templates.py  i18n.py  middleware.py
backend/genstoryai_backend/migrations/: add_session_tables.py
backend/genstoryai_backend/tests/: test_email.py
backend/src/: main.py
backend/src/agent/: character_agent.py
backend/src/api/: character_api.py
backend/src/database/: db.py  models.py
backend/src/locales/zh/LC_MESSAGES/: base.po
backend/src/models/: character.py
backend/src/utils/: i18n.py  middleware.py
frontend/genstoryai_frontend/: .gitignore  README.md  (+10 more)
scripts/: deploy.sh
(+68 files in other folders)
