[project]
name = "genstoryai-backend"
version = "0.1.0"
description = "GenStoryAI 后端服务，基于 FastAPI 构建，提供角色创建等功能"
scripts = {
    "start": "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload",
    "test": "pytest"
}
authors = [
    {name = "fengchuimailang",email = "1050575425@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-ai (>=0.3.5,<0.4.0)",
    "langfuse (>=3.0.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
