[project]
name = "genstoryai_backend"
version = "0.1.0"
description = "GenStoryAI backend, fastapi server"
authors = [
    { name = "fengchuimailang", email = "1050575425@qq.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flake8>=7.3.0,<8.0.0",
    "pytest>=8.4.1,<9.0.0",
    "fastapi>=0.115.14,<0.116.0",
    "uvicorn>=0.35.0,<0.36.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-ai>=0.3.5,<0.4.0",
    "langfuse>=3.0.8,<4.0.0",
    "sqlmodel>=0.0.8,<0.1.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "passlib>=1.7.4,<2.0.0",
    "bcrypt>=4.0.0,<4.1.0",
    "python-jose>=3.3.0,<4.0.0",
    "PyJWT>=2.8.0,<4.0.0",
    "redis>=6.2.0,<7.0.0"
]

[project.scripts]
start = "genstoryai_backend.run:main"
test = "pytest:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"